<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

	<ImageView
			android:id="@+id/image"
			android:layout_width="72dip"
			android:layout_height="72dip"
			android:layout_margin="3dip"
			android:adjustViewBounds="true"
			android:src="@drawable/placeimg_320_240_nature"
			android:contentDescription="@string/cd_story_image"
			android:scaleType="centerCrop"/>

	<TextView
			android:id="@+id/title"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@+id/image"
			android:layout_centerVertical="true"
			android:layout_marginLeft="20dip"
			android:text="@string/dummy_title"
			android:textSize="22sp"/>

	<ImageView
			android:id="@+id/navigation_arrow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			android:contentDescription="@string/story_list_arrow"
			android:src="@drawable/ic_navigate_right"/>

</RelativeLayout>