<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

	<ScrollView
			android:id="@+id/scrollView1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_above="@+id/download"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_margin="15dp">

		<RelativeLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:id="@+id/image"
					android:layout_alignParentTop="true"
					android:layout_centerHorizontal="true"
					android:scaleType="fitStart"
					android:adjustViewBounds="true"
					android:contentDescription="@string/cd_no_market_image"
					android:src="@drawable/ic_empty"/>

			<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/title"
					android:layout_alignBottom="@+id/image"/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:text="@string/market_by"
					android:id="@+id/by"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:layout_alignParentLeft="true"
					android:layout_below="@+id/image"/>

			<TextView
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:id="@+id/author"
					android:paddingLeft="5dp"
					android:layout_alignBaseline="@+id/by"
					android:layout_below="@+id/image"
					android:layout_toRightOf="@+id/by"/>

			<TextView
					android:id="@+id/description"
					android:layout_below="@+id/by"
					style="@style/TagStoryViewMedium"
					android:layout_marginBottom="10dp"
					android:layout_marginTop="15dp"/>

		</RelativeLayout>
	</ScrollView>

	<Button
			android:id="@+id/download"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentRight="true"
			android:background="@color/android_yellow"
			android:onClick="onClick"
			android:padding="15dp"
			android:text="@string/market_download"
			android:textStyle="bold"/>

</RelativeLayout>